src/widgets/back-to-top/back-to-top.module.css
.backToTopButton {
  position: fixed;
  right: var(--s);
  bottom: -108px;
  z-index: 30;
  display: flex;
  inline-size: var(--2xl);
  min-inline-size: var(--2xl);
  block-size: var(--2xl);
  aspect-ratio: 1;
  align-items: center;
  justify-content: center;
  padding: var(--xs);
  border: 1px solid var(--floating-surface-border-color);
  border-radius: 999px;
  background-color: var(--floating-surface-background);
  box-shadow: var(--floating-surface-shadow);
  backdrop-filter: var(--floating-surface-filter);
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
  -webkit-backdrop-filter: var(--floating-surface-filter);
  transition:
    background-color var(--transition-slow),
    border-color var(--transition-slow),
    opacity var(--transition-slow),
    transform var(--transition-slow),
    visibility var(--transition-slow),
    backdrop-filter var(--transition-slow),
    -webkit-backdrop-filter var(--transition-slow);
}

.backToTopButton:hover {
  background-color: var(--primary-10);
  border-color: var(--primary-10);
}

.visible {
  opacity: 1;
  pointer-events: auto;
  transform: translateY(-124px);
  visibility: visible;
}

.icon {
  flex: none;
  width: var(--xl);
  height: var(--xl);
  color: var(--text-10);
  opacity: 0.6;
  transition:
    color var(--transition-slow),
    opacity var(--transition-slow);
}

.backToTopButton:hover .icon {
  color: var(--text-0);
  opacity: 1;
  animation: var(--animation-name-arrow-bounce) 1500ms linear infinite;
}

@media (min-width: 577px) {
  .backToTopButton {
    right: var(--xl);
    bottom: -164px;
  }

  .visible {
    transform: translateY(-196px);
  }
}

@media (min-width: 1761px) {
  .backToTopButton {
    right: auto;
    left: calc(50% + 760px);
  }
}

